chore: ignore generated folders and node_modules; remove from index

--- a/web/index.html
+++ b/web/index.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="$FLUTTER_BASE_HREF">
-
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
-
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="prueba_tecnica">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
-
-  <title>prueba_tecnica</title>
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+  <title>Prueba Técnica</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Firebase SDK para Web (CRÍTICO) -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  
+  <script>
+    // Tu configuración Firebase Web
+    const firebaseConfig = {
+      apiKey: "AIzaSyBSTmCC01KJHoQTFkT_bNpHGSBdhXKJd7U",
+      authDomain: "prueba-tecnica-65e6e.firebaseapp.com",
+      projectId: "prueba-tecnica-65e6e",
+      storageBucket: "prueba-tecnica-65e6e.firebasestorage.app",
+      messagingSenderId: "520125025244",
+      appId: "1:520125025244:web:0969067d503bd03d5b1d19"
+    };
+    
+    // Inicializar Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
